fix: change overflow-properties for long texts in name and desc

--- a/blocks/profile/__description/profile__description.css
+++ b/blocks/profile/__description/profile__description.css
@@ -6,7 +6,12 @@
   padding: 0;
 
   margin-top: 16px;
+
+  text-overflow: ellipsis;
+  overflow: hidden;
+  hyphens: auto;
 }
+
 
 @media screen and (max-width: 767.5px) {
   .profile__description {
