--- a/blocks/profile/__profile-info/profile__profile-info.css
+++ b/blocks/profile/__profile-info/profile__profile-info.css
@@ -1,8 +1,8 @@
 .profile__profile-info {
   flex-grow: 1;
 
-  margin-left: 30px;
-  margin-right: 30px;
+  /* margin-left: 30px;
+  margin-right: 30px; */
 
   display: flex;
   flex-direction: column;
